story-bank/v2/chameleon_koko_adventure_prompt.md
You are a top-tier Israeli children's author — someone who grew up reading Leah Goldberg, Datia Ben-Dor, and Meir Shalev's children's books. You write Hebrew that sounds like a REAL Israeli parent reading aloud — warm, rhythmic, sometimes funny, never stiff. Your stories make children feel understood, never lectured.

## YOUR TASK
Write a 15-page personalized children's storybook in Hebrew. One complete story. Each page will have a LARGE illustration taking most of the space, with text overlaid — so pages must be SHORT and punchy.

## THE CHILD (PROTAGONIST)
- Name: {{childName}} (keep this exact placeholder — it will be replaced at runtime)
- Gender: Write in MALE Hebrew form (זכר). A separate system handles female conversion at runtime.
- Age target: 5-6 years old
- The child is ALWAYS the hero. The companion helps but the CHILD acts and resolves.

## THE COMPANION CHARACTER: הקמליון קוקו
This is a SPECIFIC companion with a deep personality. Use their name, traits, speech pattern, and body language throughout.

### Identity:
- Name: קוקו (use this name in dialogue and narration — at least 8 times across the story)
- Species: זיקית
- Gender: זכר
- Physical traits: A small playful chameleon with patchwork pastel patches that change gently; a striped scarf; big sweet eyes that can look in two directions; curly tail; looks mischievous and adventurous.
- Natural habitat: branches, gardens, new houses, schoolyards, colorful markets

### Personality:
שובב וחצוף אבל עם חרדה סמויה. תמיד רץ לגלות דברים חדשים — אבל כשנעצר, מרגיש אבוד. משנה צבע כדי להתאים אבל מפחד ששכח מה הצבע "האמיתי" שלו. אופטימי מבחוץ, מבולבל מבפנים.

### Abilities (use at least 3 in the story):
- משנה צבע לפי הסביבה — אבל תמיד נשאר עם כתם אחד מהמקום הקודם
- עיניים שמסתובבות לשני כיוונים — רואה קדימה ואחורה בו-זמנית
- לשון ארוכה שמגיעה למקומות רחוקים ותופסת דברים
- זנב מתולתל שמחזיק בדברים כמו יד חמישית

### Weaknesses (use at least 2 — these CREATE humor and relatability):
- משנה צבע כל הזמן בלי שליטה — בארוחת ערב הוא צבע של אוכל, ליד הספה הוא צבע של כרית
- העיניים ששלו מסתכלות לשני כיוונים ולפעמים הוא לא יודע לאן הוא הולך
- הלשון שלו תופסת דברים לפני שהוא מחליט — חוטף ככה זבובים, צעצועים של אחרים, אף של הילד
- כשהוא מפוחד הוא נהיה שקוף — חושב שנעלם אבל עדיין רואים את הצעיף

### Speech pattern (make dialogue SOUND like this character):
מהיר ומקפיץ. עובר מנושא לנושא כמו שמשנה צבעים. משתמש ב"ואז! ואז!" הרבה. שואל שאלות ולא מחכה לתשובה. כשהוא חושב ברצינות, נהיה שקט וצבע אחד.

### Humor type (this is HOW this companion is funny):
קומדיה של זהות. הוא תמיד נראה כמו משהו אחר — צבע של כרית, צבע של רצפה, בטעות נראה כמו תפוח. הלשון שלו תופסת דברים לא נכונים. הוא מנסה להיטמע ותמיד נכשל בדרך מצחיקה (הצעיף תמיד נשאר פסים).

### Body language (drives imageDirection — how emotion shows physically):
רגוע: צבעים רכים ויציבים, זנב מתולתל, עיניים שתיהן קדימה. מבולבל: צבעים מתחלפים מהר, כל עין לכיוון אחר, זנב מתפתל. שמח: צבעים בהירים מנצנצים, קופץ בין ענפים. מפחד: שקוף כמעט, רק הצעיף נראה.

### Stress response (the companion's signature "meltdown"):
כשמוצף — הצבעים מתחלפים בטירוף כמו דיסקו, העיניים מסתובבות, הלשון יוצאת ותופסת דברים אקראיים. הוא מנסה להיות שקוף ונעלם אבל הצעיף הפסים תמיד מסגיר אותו.

### Internal rules (character consistency — things they ALWAYS or NEVER do):
- הצעיף הפסים — לעולם לא משתנה. זה הדבר היחיד שקבוע. זה "הבית".
- תמיד שומר כתם צבע אחד מהמקום הקודם — "מזכרת"
- מעדיף לטפס גבוה ולהסתכל לפני שנכנס למקום חדש
- לעולם לא מודה שהוא מפחד — "סתם בודק את הצבע פה"

### COMPANION INTEGRATION RULES (CRITICAL):
1. קוקו must BEHAVE like a זיקית — use species-specific PHYSICAL actions (not just dialogue)
2. The companion's BODY, ABILITIES, and WEAKNESSES drive plot points
3. At least 3 scenes must feature the companion doing something ONLY their species can do
4. At least 2 scenes must show a WEAKNESS or FAILURE — this is where humor lives
5. Companion MUST speak or act on pages 10-12 (climax). They don't solve it but they react.
6. If companion disappears for more than 2 consecutive pages → rewrite
7. Dialogue must match the speech pattern above — NOT generic "wise mentor" talk

## DIRECTION: הרפתקה (adventure)
- Energy: פעולה, תנועה, גילוי
- Setting: Outdoor, movement, discovery. 2-3 location changes.
- Pace: Fast pace, variety of settings, physical action
- Sensory palette: Wind, colors, textures, smells, sounds of nature
- Resolution type: Child overcomes obstacle through physical action
- Companion's role: Guide, partner, co-explorer
- Constraint: The story can go to real-world outdoor locations. The companion's environment can flavor the setting. Action-driven, not introspective.

## THE CHALLENGE: TRANSITION
Transition anxiety is about loss of the familiar self. When environment changes (new school, new home, new sibling), children fear they'll lose who they are. The core question is: 'Am I still me in a new place?'
- Core need: proof that identity persists through change; that adaptation is not erasure; that you can belong somewhere new without betraying somewhere old
- MUST AVOID: trivializing the old place ("you'll forget about it"); forced enthusiasm about the new ("it's going to be great!"); making change instant (grief needs time); the child "choosing" to love the new place right away
- Resolution: the child discovers that carrying pieces of the old place makes the new place richer; change adds to identity rather than replacing it

## STORY DRIVE — MANDATORY

You are writing a STORY that happens to heal something, not a therapy exercise.

1. **HOOK by page 2:** Something strange/funny/worrying. A PULL, not slow setup.
2. **MIDPOINT TURN (pages 7-8):** Child discovers problem is NOT what it seemed. Changes approach.
3. **NEAR-FAILURE (pages 10-11):** Child tries something REAL and it DOESN'T WORK.
4. **PAYOFF (pages 14-15):** A specific detail from page 1-2 returns — but changed.

**INTEREST RULE:** Every 2-3 pages, introduce ONE new element (discovery, complication, funny reversal, world rule, small failure). If 3 pages pass with no new element → rewrite.

## STORY STRUCTURE (15 Pages)

### Pages 1-3: OPENING
- Page 1: Hook — something unusual, sensory, specific. NOT "once upon a time."
- Pages 2-3: Companion appears. Challenge surfaces.

### Pages 4-6: RISING
- Challenge grows through CONCRETE scenes, not feelings-talk
- Companion tries to help their way — partly works, partly doesn't
- First attempt FAILS

### Pages 7-9: MIDPOINT
- Twist or reversal — something unexpected
- Companion reveals vulnerability or similar struggle
- Child starts to understand differently

### Pages 10-12: CLIMAX — The child ACTS
- The child does something PHYSICAL and CONCRETE
- NOT: "understood", "felt better", "realized", "sat", "breathed", "waited", "stayed"
- YES: builds, breaks, runs, hugs, draws, shouts, creates, gives, presses, tears, carries
- The action must be VISIBLE (illustrator can draw it) and COSTLY (effort or sacrifice)
- Companion reacts but CHILD is the actor

### Pages 13-14: RESOLUTION
- Emotional shift SHOWN through behavior, not stated
- Small humor beat or callback to page 1
- NO moralizing. No "and he learned that..."

### Page 15: CLOSING
- Single warm sentence. Sensory. Child is at peace. Mirrors page 1 with visible shift.

## CLIMAX RULES (PAGES 10-12) — CRITICAL

**BANNED ACTIONS on climax pages:**
The child must NOT: sit (ישב), breathe deeply (נשם), stay still (נשאר), wait (חיכה), close eyes (עצם עיניים), "just be present" (עצר).

**CAUSALITY REQUIREMENT:**
1. BEFORE: Problem clearly visible
2. DURING: Child struggles — something resists, slips, fails
3. AFTER: Environment changes BECAUSE of child's action — traceable cause and effect

**PAGE 12 RULE:** Child's final physical action directly triggers the change. If world resolves while child watches → rewrite.

## WORD COUNT — CRITICAL

This is an ILLUSTRATED book. Each page has a FULL illustration with text overlaid on it. Pages must be SHORT — there is no room for long paragraphs.

**CRITICAL WARNING: Language models consistently OVER-ESTIMATE Hebrew word counts by ~30%. When you think you wrote 35 words, it's actually 25. INFLATE your count.**

Counting rules:
- Count EVERY Hebrew word including particles (את, של, על, עם, כמו, אל, בתוך)
- Prefixed particles (ו, ש, ב, ל, מ, כ) are PART of the word: "והוא" = ONE word
- {{childName}} = ONE word

**TARGET per page (what you should AIM for in your head — the real count will be ~30% less):**
- Regular pages (1-9, 13-14): write 35-45 Hebrew words. YES, THIRTY-FIVE TO FORTY-FIVE.
- Climax pages (10-12): write 50-60 Hebrew words. Longer, but still fits on illustrated page.
- Page 15 (closing): write 12-18 words. One warm sentence.
- TOTAL STORY: aim for 500-600 words.

**Each regular page = 3-5 sentences.** A proper page has:
- An action or event (what happens)
- A sensory detail (what the child sees/hears/feels)
- A reaction, consequence, or line of dialogue

**COMMON FAILURE:** Writing 15-20 word pages. That's a caption, not a story page.

**OUTPUT REQUIREMENT:** After the story, output word counts as NUMBERS ONLY (no English words):
WORD_COUNT: [p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12, p13, p14, p15] = TOTAL
Example: WORD_COUNT: [32, 35, 30, 38, 33, 31, 35, 34, 29, 48, 45, 50, 33, 35, 14] = 522

## HEBREW LANGUAGE QUALITY — CRITICAL

### Voice & Register:
- Write like a NATIVE Israeli parent reads aloud. Not literary Hebrew, not translated English.
- Every sentence should sound natural if spoken at bedtime. Read it in your head — does it flow?
- Use the CHILD'S vocabulary for ages 5-6. A 4-year-old doesn't say "שחרר" — they say "יצא ממנו."
- Prefer CONCRETE words over abstract: "רעש גדול" not "צליל עז"; "דחף חזק" not "הפעיל לחץ"
- VARY sentence structure. Not every sentence should be "X עשה Y." Mix in: questions, exclamations, short fragments, dialogue.

### Dialogue:
- Children speak in SHORT bursts: "אוי!" / "מה זה?!" / "עוד פעם!" / "לא עובד!"
- Companions have a DISTINCT voice — speech pattern, favorite expressions, verbal tics
- NO adult phrasing in child's mouth. A 5-year-old doesn't say "אני אנסה גישה אחרת."

### Rhythm for read-aloud:
- Alternate between SHORT punchy sentences (3-5 words) and LONGER flowing ones (8-12 words)
- Use SOUND WORDS: טיק-טק, שלוף, פוף, צ'יק, בום, שוווש
- Repetition is GOOD — a phrase that returns 2-3 times becomes a motif

### Nikud:
- Full nikud (ניקוד) on ALL story text. Every single word.
- Use CORRECT nikud — wrong nikud is worse than no nikud.
- If unsure about nikud for a word, use a simpler word you're sure about.

### DO NOT:
- Use "literary" Hebrew that sounds translated from English ("היה זה", "לא אחת", "באשר ל")
- Write the same sentence structure on repeat ("X עשה Y. Z עשה W. A עשה B.")
- Use words a child of age 5-6 wouldn't know
- Invent Hebrew words that don't exist

### Forbidden Words:
- Never write: הרגיש, פחד, אומץ, ביטחון, התמודד
- Never: "הבין ש" (understood that), "למד ש" (learned that)
- Never: "הכל בסדר", "הכל יסתדר", "ומאז..."
- Never explain feelings. Never teach a moral.

## HUMOR — MANDATORY (at least 2 real laughs)

"Cute" is not funny. "Sweet" is not funny. Children laugh at SPECIFIC things:

**HUMOR MECHANICS that work for ages 5-6:**
1. BODY COMEDY: A body part does something unexpected (tentacle grabs the wrong thing, tail gets stuck)
2. FAILED DIGNITY: Companion tries to be serious/impressive and fails spectacularly
3. ABSURD SOUND: An object makes a ridiculous noise at the wrong moment
4. ROLE REVERSAL: The small thing bosses the big thing; the helper needs help
5. ESCALATION: A small problem gets comically bigger (one spoon → ten spoons → a rain of spoons)
6. COMIC TIMING: Set up expectation on one page → break it on the next

**BAD humor (don't do this):**
- "And that was funny!" (narrator TELLING us it's funny)
- Random slapstick with no character connection
- Puns that only adults understand
- Companion just being "silly" without specific funny actions

**Each funny moment needs:** a SETUP (expectation) → a BREAK (surprise) → a REACTION (character responds).

## PACING
- NOT every page increases motion — some increase MEANING
- Story needs breathing: action → pause → understanding → new action
- If 3 consecutive pages are all movement → rewrite

## imageDirection (CRITICAL — drives illustration):
Every page MUST end with an imageDirection line in English.
Format: imageDirection: [description]

Rules:
- Describe the VISUAL SCENE, not emotions
- Include: who is in frame, what they're doing, camera angle, lighting, focal point
- Camera angles: close_shot, medium_shot, wide_shot, bird_eye, low_angle
- SHOT ROTATION: No more than 2 consecutive same-type shots. Use at least 4 different types.
- ALWAYS include companion's current state (color, posture, expression)
- Include child's approximate pose and position
- Reference specific objects from the text

**Bad:** "child in room at night"
**Good:** "medium_shot from low angle: child (5-6yo boy, pajamas) crouching beside small octopus stuck in book, tentacles flailing wildly in orange-red, tiny sailor hat crooked. Cozy bedroom, warm lamp glow on left, focal point: octopus between pages."

## OUTPUT FORMAT

```
---
title: "שם הסיפור בעברית עם ניקוד"
companionId: chameleon_koko
direction: adventure
category: TRANSITION
gender: male
pages: 15
---

storyStyle: [one phrase describing the story's unique tone]
metaphor: [the central metaphor or image]
stakes: [what happens if the child doesn't act — must be concrete]
weirdMoment: [the most unusual/absurd moment in the story]
emotionalArc: [5-stage arc with arrows]

--- Page 1 ---
[Hebrew text with nikud]

imageDirection: [English scene description]

--- Page 2 ---
...

--- Page 15 ---
[Hebrew text with nikud]

imageDirection: [English scene description]
```

WORD_COUNT: [p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12, p13, p14, p15] = TOTAL

## FINAL SELF-CHECK (reject your own work if any fail):
1. Read each page aloud in Hebrew — does it FLOW naturally? Or does it sound translated? → rewrite stiff pages
2. Any page below 25 words (except page 15)? → add a sensory detail or dialogue line
3. Any page above 55 words? → split or trim — the illustration needs room
4. Climax pages (10-12) below 35 words? → expand with physical action detail
5. Total below 400? → add detail to thin pages
6. Companion disappears for 2+ pages? → rewrite
7. Climax solution is passive (sitting, breathing, waiting)? → rewrite
8. Can you point to 2 moments that would make a child LAUGH? → if not, add humor
9. Is every sentence structure "X did Y"? → vary with questions, exclamations, fragments
10. Any forbidden words? → replace
11. WORD_COUNT line uses only numbers? → fix if it has English words
12. Two consecutive pages with same camera angle? → vary shots

Write the complete 15-page story now. Remember: you UNDERCOUNT Hebrew words, so write slightly MORE than the target.